# kraken

./: .editorconfig  .gitignore  ARRAYS_TODO.md  CHANGELOG.md  Cargo.toml  README.md  array_full_test  array_full_test.kr  array_test  array_test.kr  bitwise_full_test  bitwise_full_test.kr  bitwise_test  bitwise_test.kr  break_test  break_test.kr  char_test  char_test.kr  comprehensive  comprehensive.kr  comprehensive_test.kr  debug_array.kr  env_test  env_test.kr  fib_test.kr  file_read_simple  file_read_simple.kr  file_read_test.kr  file_test  file_test.kr  for_test  for_test.kr  hello_world.kr  if_test.kr  inline_array  inline_array.kr  io_test  io_test.kr  match_full_test  match_full_test.kr  (+39 more)
compiler/: Cargo.toml
compiler/src/: error.rs  lib.rs  main.rs
compiler/src/analyzer/: mod.rs  type_checker.rs  types.rs
compiler/src/codegen/: llvm_backend.rs  mod.rs
compiler/src/lexer/: mod.rs  token.rs  tokenizer.rs
compiler/src/parser/: ast.rs  mod.rs  parser.rs
docs/: spec.md
examples/: hello.kr
runtime/: Cargo.toml
runtime/src/: async_adapter.rs  gc.rs  lib.rs  memory.rs
